kubernetes deployment/cassandra.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cassandra-statefulset
spec:
  serviceName: "cassandra-service"
  replicas: 1
  selector:
    matchLabels:
      app: cassandra-db
  template:
    metadata:
      labels:
        app: cassandra-db
    spec:
      containers:
      - name: cassandra
        image: cassandra
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9042
          name: cassandra-port
