kubernetes deployment/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rs-deployment
  labels:
    app: rs
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rs
  template:
    metadata:
      labels:
        app: rs
    spec:
      containers:
      - name: rs-pod
        image: rs:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
