kubernetes deployment/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  labels:
    app: rs-postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
    name: postgres-port
  selector:
    app: postgres-db
