kubernetes deployment/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  type: NodePort
  selector:
    app: rs
  ports:
    - port: 8000
      targetPort: 8000
